# jvem

./: .env  .gitignore  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE
.github/workflows/: build.yml  build_and_release.yml  release.yml
src/: main.rs
src/commands/: clean.rs  csv_ops.rs  current.rs  deactivate.rs  install.rs  ls.rs  lsrem.rs  mod.rs  sources.csv  uninstall.rs  usev.rs  utils.rs
src/commands/java/: clean.rs  current.rs  deactivate.rs  install.rs  ls.rs  lsrem.rs  mod.rs  uninstall.rs  usev.rs
src/commands/maven/: install.rs  uninstall.rs
src/commands/node/: clean.rs  current.rs  deactivate.rs  install.rs  ls.rs  lsrem.rs  mod.rs  uninstall.rs  usev.rs
src/constants/: java_versions.rs  mod.rs  versions.rs
src/tests/: file_utils_test.rs  mod.rs  test.sh
src/utils/: csv_ops.rs  env_ops.rs  file_utils.rs  mod.rs
